# FUNDAMENTALS_UWB_FIRMWARE

./: .gitignore  CMakeLists.txt  CONTRACTS_VERSION  Kconfig  README.md  overlay-lowpower.conf  pm_static.yml  prj.conf  sysbuild.conf  west.yml
.github/workflows/: build.yml
boards/: nrf52dk_nrf52832.overlay
docs/: ota.md
drivers/dw1000/: CMakeLists.txt  Kconfig  dw1000_config.c  dw1000_config.h  dw1000_ranging.c  dw1000_ranging.h  dw1000_sleep.c  dw1000_sleep.h  dw1000_sync.c  dw1000_sync.h  phy_config.h  twr_responder.c  twr_responder.h  uwb_blink_codec.c  uwb_blink_codec.h  uwb_contract_version.h  uwb_cycle_ref.c  uwb_cycle_ref.h  uwb_frames.h  uwb_join.c  uwb_join.h  uwb_join_codec.c  uwb_join_codec.h  uwb_join_track.c  uwb_join_track.h  uwb_slot_timing.c  uwb_slot_timing.h  uwb_standby.c  uwb_standby.h  uwb_tracking.c  uwb_tracking.h  uwb_twr_codec.c  uwb_twr_codec.h
drivers/dw1000/deca_driver/: deca_device.c  deca_device_api.h
drivers/dw1000/port/: deca_port.c  deca_port.h  deca_port_stub.c
dts/bindings/: decawave,dw1000.yaml
keys/: mcuboot_dev_key.pem
samples/dw1000_config/: CMakeLists.txt  Kconfig  prj.conf
samples/dw1000_config/boards/: nrf52dk_nrf52832.overlay
samples/dw1000_config/src/: main.c
samples/dw1000_devid/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/dw1000_devid/boards/: nrf52dk_nrf52832.overlay
samples/dw1000_devid/src/: main.c
samples/tag_join_track/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/tag_join_track/boards/: nrf52dk_nrf52832.overlay
samples/tag_join_track/src/: main.c
samples/tag_tracking/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/tag_tracking/boards/: nrf52dk_nrf52832.overlay
samples/tag_tracking/src/: main.c
samples/twr_responder/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/twr_responder/boards/: nrf52dk_nrf52832.overlay
samples/twr_responder/src/: main.c
src/: battery.c  battery.h  battery_zephyr.c  ble_adv_policy.c  ble_adv_policy.h  ble_adv_policy_zephyr.c  image_health.c  image_health.h  image_health_zephyr.c  main.c
tests/battery/: CMakeLists.txt  prj.conf  testcase.yaml
tests/battery/src/: test_battery.c
tests/ble_adv_policy/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ble_adv_policy/src/: test_ble_adv_policy.c
tests/blink_codec/: CMakeLists.txt  prj.conf  testcase.yaml
tests/blink_codec/src/: test_blink_codec.c
tests/dw1000_config/: CMakeLists.txt  prj.conf  testcase.yaml
tests/dw1000_config/src/: mock_deca_driver.c  mock_deca_driver.h  mock_port.c  mock_port.h  test_dw1000_config.c
tests/dw1000_devid/: CMakeLists.txt  prj.conf  testcase.yaml
tests/dw1000_devid/src/: mock_platform.c  mock_platform.h  test_dw1000_devid.c
tests/dw1000_ranging/: CMakeLists.txt  prj.conf  testcase.yaml
tests/dw1000_ranging/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_dw1000_ranging.c
tests/dw1000_sleep/: CMakeLists.txt  prj.conf  testcase.yaml
tests/dw1000_sleep/src/: mock_deca_driver.c  mock_deca_driver.h  mock_port.c  mock_port.h  mock_seq.c  mock_seq.h  test_dw1000_sleep.c
tests/dw1000_sync/: CMakeLists.txt  prj.conf  testcase.yaml
tests/dw1000_sync/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_dw1000_sync.c
tests/image_health/: CMakeLists.txt  prj.conf  testcase.yaml
tests/image_health/src/: test_image_health.c
tests/join/: CMakeLists.txt  prj.conf  testcase.yaml
tests/join/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_join.c
tests/join_codec/: CMakeLists.txt  prj.conf  testcase.yaml
tests/join_codec/src/: test_join_codec.c
tests/join_track/: CMakeLists.txt  prj.conf  testcase.yaml
tests/join_track/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_join_track.c
tests/slot_timing/: CMakeLists.txt  prj.conf  testcase.yaml
tests/slot_timing/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_slot_timing.c
tests/tracking/: CMakeLists.txt  prj.conf  testcase.yaml
tests/tracking/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_tracking.c
tests/twr_codec/: CMakeLists.txt  prj.conf  testcase.yaml
tests/twr_codec/src/: test_twr_codec.c
tests/twr_responder/: CMakeLists.txt  prj.conf  testcase.yaml
tests/twr_responder/src/: mock_deca_driver.c  mock_deca_driver.h  mock_log.c  test_twr_responder.c
tests/uwb_cycle_ref/: CMakeLists.txt  prj.conf  testcase.yaml
tests/uwb_cycle_ref/src/: mock_log.c  test_uwb_cycle_ref.c
tests/uwb_standby/: CMakeLists.txt  prj.conf  testcase.yaml
tests/uwb_standby/src/: mock_deca_driver.c  mock_deca_driver.h  mock_port.c  mock_port.h  mock_seq.c  mock_seq.h  test_uwb_standby.c
